# cato

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: MVSC-64.yml  i686.yml  ubuntu-rust-build.yml  x86_64-build.yml  x86_64.yml
pkg/choco/cato/: cato.nuspec
pkg/choco/cato/tools/: LICENSE.txt  VERIFICATION.txt
src/: main.rs
tests/: cat.rs  cato.rs
