[package]
name = "rcat"
version = "0.1.0"
authors = ["Alex Campbell alex.m.campbell@hotmail.com"]
edition = "2024"
license = "GPL-3.0-only"
license-file = "LICENSE"
description = "A lightweight file catenation tool."
readme = "README.md"
homepage = "https://github.com/notnotnull/rcat"
repository = "https://github.com/notnotnull/rcat"
keywords = ["cli", "cat", "rcat"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
