[package]
name = "cato"
version = "0.1.0"
authors = ["Alex Campbell alex.m.campbell@hotmail.com"]
edition = "2024"
license = "GPL-3.0-only"
description = "A lightweight file catenation tool."
readme = "README.md"
homepage = "https://github.com/notnotnull/cato"
repository = "https://github.com/notnotnull/cato"
keywords = ["cli", "cat", "cato"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"